<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:paddingTop="10dp">


    <EditText
        android:id="@+id/edt_oldpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:text="@string/empty_text" />

    <EditText
        android:id="@+id/edt_newpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:text="@string/empty_text" />

    <EditText
        android:id="@+id/edt_renewpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/renew_password"
        android:inputType="textPassword"
        android:text="@string/empty_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:text="@string/save_button" />

        <Button
            android:id="@+id/btn_exit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:text="@string/exit_button" />
    </LinearLayout>
</LinearLayout>
