<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:scaleY="1.5"
                android:text="@string/resgister_textview_title"
                android:textColor="@android:color/holo_red_dark"
                android:textScaleX="1.5"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/itext_account"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:hint="@string/register_1"
                android:inputType="textPersonName"
                android:text="@string/empty_text" />

            <EditText
                android:id="@+id/itext_password"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:hint="@string/register_2"
                android:inputType="textPersonName|textPassword"
                android:text="@string/empty_text" />

            <EditText
                android:id="@+id/itext_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:hint="@string/register_3"
                android:inputType="textPersonName"
                android:text="@string/empty_text" />

            <EditText
                android:id="@+id/itext_identity"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:hint="@string/register_4"
                android:inputType="textPersonName"
                android:text="@string/empty_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/itext_school"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginEnd="0dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/editbox_background"
                    android:ems="10"
                    android:hint="@string/register_5"
                    android:inputType="textPersonName"
                    android:text="@string/empty_text" />

                <EditText
                    android:id="@+id/itext_classes"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/editbox_background"
                    android:ems="10"
                    android:hint="@string/register_6"
                    android:inputType="textPersonName"
                    android:text="@string/empty_text" />
            </LinearLayout>

            <EditText
                android:id="@+id/itext_province"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:hint="@string/register_7"
                android:inputType="textPersonName"
                android:text="@string/empty_text" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/itext_district"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginEnd="0dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/editbox_background"
                    android:ems="10"
                    android:hint="@string/register_8"
                    android:inputType="textPersonName"
                    android:text="@string/empty_text" />

                <EditText
                    android:id="@+id/itext_village"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/editbox_background"
                    android:ems="10"
                    android:hint="@string/register_9"
                    android:inputType="textPersonName"
                    android:text="@string/empty_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_register"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/btn_default"
                    android:drawableStart="@drawable/sign_up"
                    android:text="@string/register_button" />

                <Button
                    android:id="@+id/btn_back"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/btn_default"
                    android:drawableStart="@drawable/icon_backward"
                    android:text="@string/backward_button" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
